# advent-of-code-friend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
config/: deploy.yml
src/: aoc.rs  bot.rs  config.rs  daily.rs  format.rs  lib.rs  main.rs
src/aoc/: leaderboard.rs  mod.rs  puzzle.rs
src/bot/: config.rs  mod.rs
src/bot/commands/: leaderboard.rs  mod.rs  puzzle.rs  register.rs
src/commands/: help.rs  leaderboard.rs  mod.rs  puzzle.rs  register.rs  status.rs  unregister.rs
src/commands/daily/: leaderboard.rs  mod.rs  puzzle.rs
src/commands/daily/unregister/: leaderboard.rs  mod.rs  puzzle.rs
