[package]
name = "advent-of-code-friend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "http"] }
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = "1.0.147"
serde_json = "1.0"
reqwest = { version = "0.11.13", features = ["json"] }
chrono = "0.4.23"
log = "0.4.17"
fern = { version = "0.6.1", features = ["colored"] }
