[package]
name = "advent-of-code-friend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = { version = "0.11.7", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "http"] }
strum = { version = "0.25.0", features = ["derive"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
serde = "1.0.192"
serde_json = "1.0.108"
reqwest = { version = "0.11.22", features = ["json"] }
chrono = "0.4.31"
log = "0.4.20"
fern = { version = "0.6.2", features = ["colored"] }
